# learning

./: LICENSE
Linux_workstation/: Dockerfile  (+12 more)
python_lang/: pyproject.toml
python_lang/Intro_to_Python/CodeDecode/: music_deserialize.py  music_serialize.py
python_lang/Intro_to_Python/Func/: 01.py  03.py
python_lang/Intro_to_Python/console_file_manager/: log.txt  main.py
python_lang/Intro_to_Python/guess_the_number/: guess_the_num.py
python_lang/PythonBasics/: README.md
python_lang/PythonBasics/less_2_type_and_operations/: task_05.py
python_lang/PythonBasics/less_3_functions/: task_01.py  task_02.py  task_05.py  task_06_and_task_07.py
python_lang/PythonBasics/less_4/: task_02.py  task_03.py  task_04.py  verification.py
python_lang/PythonBasics/less_5_working_with_files/: text_5.txt  text_7_result.json
python_lang/PythonBasics/less_6_OOP/: task_02.py  task_03.py  task_04.py
python_lang/PythonBasics/less_7_OOP_addition/: task_03.py
python_lang/PythonBasics/less_8_OOP_addition2/: task_01.py  task_02.py  task_07.py
python_lang/PythonBasics/less_8_OOP_addition2/task_04_05_06/: company.py  department.py  store.py
python_lang/Python_libraries_np_pd_plt_skykit/less_02_numpy,pandas/: less_01_hw.ipynb
python_lang/data_analysis_algorithms/less_01/: less_01_hw.ipynb
python_lang/data_analysis_algorithms/less_01/educational_materials/: Lesson_1_script.ipynb  Разбор ДЗ 1. Линейная регрессия и градиентный спуск.ipynb
python_lang/data_analysis_algorithms/less_02/: less_02_hw.ipynb
python_lang/data_analysis_algorithms/less_04/: less_04_hw.ipynb
(+50 files in other folders)
