[tool.poetry]
name = "python-lang"
version = "0.1.0"
description = ""
authors = ["Shuchalin Georgiy <Shuchalin_Georgiy@live.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
googletrans = "^3.0.0"
numpy = "^1.26.2"
prettytable = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
